# Voxel-Renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: test.frag  test.slang  test.vert
src/: App.cpp  App.h  Test.cpp  main.cpp
src/renderer/: Camera.cpp  Camera.h  CubeRenderer.cpp  CubeRenderer.h  Renderer.cpp  Renderer.h
src/renderer/detail/: IRenderer.h  VkRenderer.cpp  VkRenderer.h  VkResultHandler.cpp  VkResultHandler.h
src/renderer/detail/vulkan/: VkObjectMaps.cpp  VkObjectMaps.h  VkResultHandler.cpp  VkResultHandler.h
src/renderer/pipeline/: GPUBuffer.h  GraphicsPipeline.h  Scissor.h  Type.cpp  VertexFormat.h
src/util/: App.h  Bitmap.cpp  Bitmap.h  BufferedFile.cpp  BufferedFile.h  BufferedImage.cpp  BufferedImage.h  Constants.h  Features.h  ImGUIHelper.cpp  ImGUIHelper.h  Logger.h  Morton.cpp  Morton.h  SparseVector.h  Window.cpp  Window.h
src/util/data/: Std140Calc.h
src/util/display/: RenderConstants.h  RenderSystem.cpp  RenderSystem.h  Window.cpp  Window.h
src/util/display/buffer/: GPUBuffer.cpp  GPUBuffer.h  IndexBuffer.h  UniformBuffer.h  VertexBuffer.h
src/util/display/device/: GPUDevice.cpp  GPUDevice.h  RenderDevice.cpp  RenderDevice.h  SwapchainHandler.cpp  SwapchainHandler.h  VkDeviceHandler.cpp  VkDeviceHandler.h
src/util/display/image/: GPUImage.cpp  GPUImage.h  GPUImageSampler.cpp  GPUImageSampler.h  GPUImageView.cpp  GPUImageView.h
src/util/display/pipeline/: Descriptor.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Type.cpp  Type.h  VertexFormat.h  Viewport.h
src/util/display/texture/: Texture.h
src/util/display/vulkan/: VkConversions.cpp  VkConversions.h  VkDebugger.cpp  VkDebugger.h  VkInitializer.cpp  VkInitializer.h  VkObjectMaps.cpp  VkObjectMaps.h  VkResultHandler.cpp  VkResultHandler.h  VkStructs.h  VkUtil.h
src/world/: Block.h  Chunk.cpp  Chunk.h  ChunkData.cpp  ChunkData.h  ChunkMesh.h
src/world/chunk/: ChunkBitmap.cpp  ChunkBitmap.h  ChunkMesh.h  ChunkPacking.h  IChunk.cpp  IChunk.h
src/world/chunk/types/: EightBitChunk.cpp  EightBitChunk.h
tools/: assets.cmake
